--- a/src/main/resources/templates/membership-edit.html
+++ b/src/main/resources/templates/membership-edit.html
@@ -42,6 +42,8 @@
 <!-- CSS - theme -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/skin/default_skin/less/theme.css}">
+	<link rel="stylesheet" type="text/css"
+		  th:href="@{/skin/css/toastr.min.css}">
 
 <!-- IE8 HTML5 support -->
 <!--[if lt IE 9]>
@@ -160,212 +162,60 @@
 	<!-- /Body Wrap  -->
 
 	<!-- Scripts -->
-
-	<!-- jQuery -->
-	<script src="assets/js/jquery/jquery-1.12.3.min.js"></script>
-	<script src="assets/js/jquery/jquery_ui/jquery-ui.min.js"></script>
+	<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+	<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+	<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
+	<script th:src="@{/js/toastr.min.js}"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 
 	<!-- AnimatedSVGIcons -->
-	<script src="assets/fonts/animatedsvgicons/js/snap.svg-min.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons-config.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons-init.js"></script>
-
-	<!-- Scroll -->
-	<script
-		src="assets/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js"></script>
-
-	<!-- Mixitup -->
-
-
-	<!-- Summernote -->
-
-
-
-	<!-- HighCharts Plugin -->
-	<script src="assets/js/plugins/highcharts/highcharts.js"></script>
-
-	<!-- Highlight JS -->
-
-
-	<!-- Date/Month - Pickers -->
-
-
-
-
-
-	<!-- Magnific Popup Plugin -->
-
-
-	<!-- FullCalendar Plugin -->
-
-
-
-	<!-- Plugins -->
-
-
-	<script src="assets/js/plugins/c3charts/d3.min.js"></script>
-	<script src="assets/js/plugins/c3charts/c3.min.js"></script>
-
-
-
-
-
-	<script src="assets/js/plugins/circles/circles.js"></script>
-
-
-
-
-	<!-- Google Map API -->
-
-
-
-
-
-	<!-- Jvectormap JS -->
-	<script src="assets/js/plugins/jvectormap/jquery.jvectormap.min.js"></script>
-	<script
-		src="assets/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js"></script>
-	<script
-		src="assets/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js"></script>
-
-	<!-- Datatables JS -->
-
-
-
-
-
-	<!-- FooTable JS -->
-
-
-
-	<!-- Validate JS -->
-
-
-
-	<!-- BS Dual Listbox JS -->
-
-
-	<!-- Bootstrap Maxlength JS -->
-
-
-	<!-- Select2 JS -->
-
-
-	<!-- Typeahead JS -->
-
-
-	<!-- TagManager JS -->
-
-
-	<!-- DateRange JS -->
-
-
-	<!-- BS Colorpicker JS -->
-
-
-	<!-- MaskedInput JS -->
-
-
-	<!-- Slick Slider JS -->
-
-
-	<!-- MarkDown JS -->
-
-
-
-
-	<!-- X-edit CSS -->
-
-
-
-
-
-
-	<!-- Dropzone JS -->
-
-
-	<!-- Cropper JS -->
-
-
-	<!-- Zoom JS -->
-
-
-	<!-- Nestable JS -->
-
-
-	<!-- PNotify JS -->
-
-
-	<!-- Fancytree JSs -->
-
-
-
-
-
-
-
-	<!-- Ladda JS -->
-
-
-	<!-- NProgress JS -->
-
-
-	<!-- Countdown JS -->
-
-
-
-	<!-- CanvasBG JS -->
-
-
-	<!-- Theme Scripts -->
-	<script src="assets/js/utility/utility.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/demo/widgets_sidebar.js"></script>
-
-
-
-
-
-
-	<script src="assets/js/pages/dashboard2.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<script src="assets/js/demo/charts/highcharts.js"></script>
-
-
-
-	<!-- /Scripts -->
+	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-config.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
+	<script th:if="${lowStockMsg}">
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": false,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${lowStockMsg}]]";
+		toastr.warning(message);
+	</script>
+	<script th:if="${newOrderMsg}">
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": true,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${newOrderMsg}]]";
+		toastr.info(message);
+	</script>
 
 </body>
 
