--- a/src/main/resources/templates/add-product-price.html
+++ b/src/main/resources/templates/add-product-price.html
@@ -100,10 +100,10 @@
                                             Size <span th:text="${key.key}"></span><span th:text="${key.value}"></span>
                                         </div>
                                         <div class="row mn">
-                                                <form th:action="@{/admin/product/updatePrice}"
+                                            <form th:action="@{/admin/product/updatePrice}"
                                                   method="post" class="form-horizontal" th:object="${product}">
                                                 <input type="hidden" th:field="*{id}"/>
-                                                    <input type="hidden" th:field="*{productName}"/>
+                                                <input type="hidden" th:field="*{productName}"/>
                                                 <div class="row">
                                                     <div class="col-md-8">
                                                         <!-- Standard Fields -->
@@ -190,10 +190,12 @@
 <!-- /Body Wrap  -->
 
 <!-- Scripts -->
-
-<!-- jQuery -->
-<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
-<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
+<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
+<script th:src="@{/js/toastr.min.js}"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 
 <!-- AnimatedSVGIcons -->
 <script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
@@ -201,32 +203,49 @@
 <script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
 <script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
-<!-- Scroll -->
-<script
-        th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-<!-- HighCharts Plugin -->
-<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
-
-<!-- Plugins -->
-<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-<script th:src="@{/js/plugins/circles/circles.js}"></script>
-
-<!-- Jvectormap JS -->
-<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-<script
-        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-<script
-        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
-<!-- Theme Scripts -->
-<script th:src="@{/js/utility/utility.js}"></script>
-<script th:src="@{/js/demo/demo.js}"></script>
-<script th:src="@{/js/main.js}"></script>
-<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-<script th:src="@{/js/pages/dashboard2.js}"></script>
-<script th:src="@{/js/demo/charts/highcharts.js}"></script>
-<!-- /Scripts -->
-
+<script th:if="${lowStockMsg}">
+    toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": true,
+        "progressBar": false,
+        "positionClass": "toast-top-right",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+    var message = "[[${lowStockMsg}]]";
+    toastr.warning(message);
+    <!-- /Scripts -->
+</script>
+<script th:if="${newOrderMsg}">
+    toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": true,
+        "progressBar": false,
+        "positionClass": "toast-top-right",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+    var message = "[[${newOrderMsg}]]";
+    toastr.info(message);
+</script>
 <!-- /Scripts -->
 
 </body>
