--- a/src/main/resources/templates/form-ingredient.html
+++ b/src/main/resources/templates/form-ingredient.html
@@ -209,7 +209,7 @@
 		toastr.success(message);
 		/*]]>*/
 	</script>
-	<script th:if="lowStockMsg">
+	<script th:if="${lowStockMsg}">
 		toastr.options = {
 			"closeButton": true,
 			"debug": false,
@@ -229,7 +229,27 @@
 		}
 		var message = "[[${lowStockMsg}]]";
 		toastr.warning(message);
-		<!-- /Scripts -->
+	</script>
+	<script th:if="${newOrderMsg}">
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": true,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${newOrderMsg}]]";
+		toastr.info(message);
 	</script>
 	<!-- /Scripts -->
 
