--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,28 +23,20 @@
 			</a>
 				<ul class="dropdown-menu list-group keep-dropdown w230" role="menu">
 					<li class="list-group-item" th:if="${lowInventory>0}">
-						<span class="fa fa-envelope"></span>
+						<span class="fa fa-building"></span>
 						<a th:href="@{/admin/inventory}" class="">
 							Inventory Low
 							<span class="label label-info" th:text="${lowInventory}"></span>
 						</a>
 					</li>
-					<li class="dropdown-header clearfix">
-				
-
-						<div class="pull-right">
-							<select id="user-role">
-								<optgroup label="Logged in As:">
-									<option value="1-1" selected="selected">Admin</option>
-									<option value="1-2">Editor</option>
-									<option value="1-3">User</option>
-								</optgroup>
-							</select>
-						</div>
+					<li class="list-group-item" th:if="${newOrder>0}">
+						<span class="fa fa-briefcase"></span>
+						<a th:href="@{/admin/order/list}" class="">
+							New Order
+							<span class="label label-info" th:text="${newOrder}"></span>
+						</a>
 					</li>
-					
-					<li class="list-group-item"><span class="fa fa-cog"></span> <a
-						href="#" class=""> Account Settings </a></li>
+
 					
 					<li class="dropdown-footer text-center">
 						<form th:action="@{/logoutAdmin}" method="POST">
