--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -144,11 +144,11 @@
 		toastr.success(message);
 		/*]]>*/
 	</script>
-	<script th:if="lowStockMsg">
+	<script th:if="${lowStockMsg}">
 		toastr.options = {
 			"closeButton": true,
 			"debug": false,
-			"newestOnTop": false,
+			"newestOnTop": true,
 			"progressBar": false,
 			"positionClass": "toast-top-right",
 			"preventDuplicates": false,
@@ -166,7 +166,28 @@
 		toastr.warning(message);
 		<!-- /Scripts -->
 	</script>
-	<script th:inline="javascript">
+	<script th:if="${newOrderMsg}">
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": true,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${newOrderMsg}]]";
+		toastr.info(message);
+	</script>
+	<script th:inline="javascript" th:if="${surveyMap}">
 		$(function(){
 			Highcharts.chart('container', {
 				chart: {
@@ -209,7 +230,7 @@
 			});
 		});
 	</script>
-	<script th:inline="javascript">
+	<script th:inline="javascript" th:if="${surveyMap}">
 		$(function(){
 			Highcharts.chart('containerProduct', {
 				chart: {
