--- a/src/main/resources/templates/update-inventory.html
+++ b/src/main/resources/templates/update-inventory.html
@@ -233,7 +233,7 @@
         $('#myTable').DataTable();
     })
 </script>
-<script th:if="lowStockMsg">
+<script th:if="${lowStockMsg}">
     toastr.options = {
         "closeButton": true,
         "debug": false,
