--- a/src/main/resources/templates/guest/message.html
+++ b/src/main/resources/templates/guest/message.html
@@ -55,7 +55,7 @@
 			<div class="row height align-items-center">
 				
 					<div th:if="${message != null}">
-    					<h1>[[${message}]]</h1>
+    					<h1 class="text-success">[[${message}]]</h1>
 					</div>
 					<div th:if="${error != null}">
     					<h1 class="text-danger">[[${error}]]</h1>
