--- a/src/main/resources/templates/membership-edit.html
+++ b/src/main/resources/templates/membership-edit.html
@@ -88,7 +88,7 @@
 									</div>
 									<div class="panel-body">
 
-										<form class="form-horizontal" action="#" th:action="@{/admin/membership/saveMembership}" th:object="${membership}" method="POST">
+										<form class="form-horizontal" action="#" th:action="@{/admin/membership/editMembership}" th:object="${membership}" method="POST">
 										
 											
 														<input type="hidden" th:field="*{membership_id}" id="id" class="form-control">
@@ -98,7 +98,7 @@
 
 												<div class="col-lg-8">
 													<div class="bs-component">
-														<input type="text" th:field="*{membership_name}" id="membership_name" class="form-control" required="required">
+														<input type="text" th:field="*{membership_name}" id="membership_name" class="form-control" readonly="readonly">
 													</div>
 												</div>
 											</div>
@@ -116,7 +116,7 @@
 												<label class="col-lg-3 control-label">Discount</label>
 												
 												<div class="col-lg-8">
-												<input type="number" id="discount" class="form-control" th:field="*{discountValue}" required="required">
+												<input type="number" min="0" max="100" id="discount" class="form-control" th:field="*{discountValue}" required="required">
 												 
 												</div>
 											</div>
@@ -159,213 +159,42 @@
 	</div>
 	<!-- /Body Wrap  -->
 
-	<!-- Scripts -->
+<!-- Scripts -->
 
 	<!-- jQuery -->
-	<script src="assets/js/jquery/jquery-1.12.3.min.js"></script>
-	<script src="assets/js/jquery/jquery_ui/jquery-ui.min.js"></script>
+	<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
+	<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
 
 	<!-- AnimatedSVGIcons -->
-	<script src="assets/fonts/animatedsvgicons/js/snap.svg-min.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons-config.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons.js"></script>
-	<script src="assets/fonts/animatedsvgicons/js/svgicons-init.js"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-config.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
+	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
 	<!-- Scroll -->
 	<script
-		src="assets/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js"></script>
-
-	<!-- Mixitup -->
-
-
-	<!-- Summernote -->
-
-
-
+		th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
 	<!-- HighCharts Plugin -->
-	<script src="assets/js/plugins/highcharts/highcharts.js"></script>
-
-	<!-- Highlight JS -->
-
-
-	<!-- Date/Month - Pickers -->
-
-
-
-
-
-	<!-- Magnific Popup Plugin -->
-
-
-	<!-- FullCalendar Plugin -->
-
-
+	<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
 
 	<!-- Plugins -->
-
-
-	<script src="assets/js/plugins/c3charts/d3.min.js"></script>
-	<script src="assets/js/plugins/c3charts/c3.min.js"></script>
-
-
-
-
-
-	<script src="assets/js/plugins/circles/circles.js"></script>
-
-
-
-
-	<!-- Google Map API -->
-
-
-
-
+	<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
+	<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
+	<script th:src="@{/js/plugins/circles/circles.js}"></script>
 
 	<!-- Jvectormap JS -->
-	<script src="assets/js/plugins/jvectormap/jquery.jvectormap.min.js"></script>
+	<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
 	<script
-		src="assets/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js"></script>
+		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
 	<script
-		src="assets/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js"></script>
-
-	<!-- Datatables JS -->
-
-
-
-
-
-	<!-- FooTable JS -->
-
-
-
-	<!-- Validate JS -->
-
-
-
-	<!-- BS Dual Listbox JS -->
-
-
-	<!-- Bootstrap Maxlength JS -->
-
-
-	<!-- Select2 JS -->
-
-
-	<!-- Typeahead JS -->
-
-
-	<!-- TagManager JS -->
-
-
-	<!-- DateRange JS -->
-
-
-	<!-- BS Colorpicker JS -->
-
-
-	<!-- MaskedInput JS -->
-
-
-	<!-- Slick Slider JS -->
-
-
-	<!-- MarkDown JS -->
-
-
-
-
-	<!-- X-edit CSS -->
-
-
-
-
-
-
-	<!-- Dropzone JS -->
-
-
-	<!-- Cropper JS -->
-
-
-	<!-- Zoom JS -->
-
-
-	<!-- Nestable JS -->
-
-
-	<!-- PNotify JS -->
-
-
-	<!-- Fancytree JSs -->
-
-
-
-
-
-
-
-	<!-- Ladda JS -->
-
-
-	<!-- NProgress JS -->
-
-
-	<!-- Countdown JS -->
-
-
-
-	<!-- CanvasBG JS -->
-
-
+		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
 	<!-- Theme Scripts -->
-	<script src="assets/js/utility/utility.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/demo/widgets_sidebar.js"></script>
-
-
-
-
-
-
-	<script src="assets/js/pages/dashboard2.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<script src="assets/js/demo/charts/highcharts.js"></script>
-
-
-
-	<!-- /Scripts -->
+	<script th:src="@{/js/utility/utility.js}"></script>
+	<script th:src="@{/js/demo/demo.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
+	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
+	<script th:src="@{/js/pages/dashboard2.js}"></script>
+	<script th:src="@{/js/demo/charts/highcharts.js}"></script>
 
 </body>
 
