--- a/src/main/resources/templates/list-inventory.html
+++ b/src/main/resources/templates/list-inventory.html
@@ -89,6 +89,23 @@
 								<div class="col-xs-12">
 									<div class="panel">
 										<div class="panel-heading ">
+											<form th:action="@{/admin/inventory/export/pdf}">
+											<select id="getMonth" name="getMonth">
+												<option value="1">January</option>
+												<option value="2">February</option>
+												<option value="3">March</option>
+												<option value="4">April</option>
+												<option value="5">May</option>
+												<option value="6">June</option>
+												<option value="7">July</option>
+												<option value="8">August</option>
+												<option value="9">September</option>
+												<option value="10">October</option>
+												<option value="11">November</option>
+												<option value="12">December</option>
+											</select> <input class="btn btn-info" type="submit" id="exportPdf"
+															 value="Export to PDF" />
+											</form>
 											<span class="panel-title ptn">Inventory</span>
 										</div>
 
